main slide, event slide 375px

--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
           // arrows: false,
           gap: "40px",
           start: 0,
-          autoplay: {
-            interval: 300,
-            pauseOnHover: {
-              resetProgress: true,
-            },
-          },
+          // autoplay: {
+          //   interval: 300,
+          //   pauseOnHover: {
+          //     resetProgress: true,
+          //   },
+          // },
           autoWidth: true,
         });
 
@@ -293,20 +293,20 @@
                       src="./images/main/reser_UNE.jpg"
                       alt="The Lost Diary"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">으네 (UNE)</span>
-                      <span class="sub_text">[The Lost Diary]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">으네 (UNE)</span>
+                    <span class="sub_text">[The Lost Diary]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
                     <img src="./images/main/reser_Aro.jpg" alt="정아로" />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">정아로</span
-                      ><span class="sub_text">2nd EP [Remain]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">정아로</span
+                    ><span class="sub_text">2nd EP [Remain]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
@@ -314,11 +314,11 @@
                       src="./images/main/reser_onewe.jpg"
                       alt="2ND SPECIAL ALBUM [XOXO]"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">원위 (ONEWE)</span
-                      ><span class="sub_text">스페셜앨범 [XOXO]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">원위 (ONEWE)</span
+                    ><span class="sub_text">스페셜앨범 [XOXO]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
@@ -326,11 +326,11 @@
                       src="./images/main/reser_festa.jpg"
                       alt="PURPLE KISS 1ST SINGLE ALBUM FESTA"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">퍼플키스 (PURPLE KISS)</span
-                      ><span class="sub_text">[FESTA] (Main Ver.)</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">퍼플키스 (PURPLE KISS)</span
+                    ><span class="sub_text">[FESTA] (Main Ver.)</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
@@ -338,31 +338,29 @@
                       src="./images/main/reser_TRENDZ.jpg"
                       alt="TRENDZ POCAALBUM"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">트렌드지 (TRENDZ)</span
-                      ><span class="sub_text">[STILL ON MY WAY]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">트렌드지 (TRENDZ)</span
+                    ><span class="sub_text">[STILL ON MY WAY]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img src="./images/main/reser.trendz.jpg" alt="TRENDZ" />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">트렌드지 (TRENDZ)</span
-                      ><span class="sub_text">[STILL ON MY WAY]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">트렌드지 (TRENDZ)</span
+                    ><span class="sub_text">[STILL ON MY WAY]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
                     <img src="./images/main/reser_key.jpg" alt="" />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">키 (KEY)</span
-                      ><span class="sub_text"
-                        >[Good&Great] (PhotoBook ver.)</span
-                      >
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">키 (KEY)</span
+                    ><span class="sub_text">[Good&Great] (PhotoBook ver.)</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
@@ -370,11 +368,11 @@
                       src="./images/main/reser_dual.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">더 로즈 (Teh Rose)</span
-                      ><span class="sub_text">[DUAL(Deluxe Box Album)]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">더 로즈 (Teh Rose)</span
+                    ><span class="sub_text">[DUAL(Deluxe Box Album)]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
@@ -382,11 +380,11 @@
                       src="./images/main/reser_dual2.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">더 로즈 (Teh Rose)</span
-                      ><span class="sub_text">[DUAL(Jewel Case Album)]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">더 로즈 (Teh Rose)</span
+                    ><span class="sub_text">[DUAL(Jewel Case Album)]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
@@ -394,11 +392,11 @@
                       src="./images/main/reser.brave.jpg"
                       alt="BRAVE CIRLS BEST ALBUM"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">브레이브걸스 (Brave Girls)</span
-                      ><span class="sub_text">[BRAVE GIRLS BEST ALBUM]</span>
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">브레이브걸스 (Brave Girls)</span
+                    ><span class="sub_text">[BRAVE GIRLS BEST ALBUM]</span>
+                  </div>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
@@ -406,14 +404,14 @@
                       src="./images/main/reser_yn.jpg"
                       alt="The Breakup Archives2 이별일기2 yunb"
                     />
-                    <div class="sub_txt">
-                      <span class="sub_txt_tit">윤비(YUNB)</span
-                      ><span class="sub_text"
-                        >[The Breakup Archives 2]<br />
-                        (이별일기2)</span
-                      >
-                    </div>
                   </a>
+                  <div class="sub_txt">
+                    <span class="sub_txt_tit">윤비(YUNB)</span
+                    ><span class="sub_text"
+                      >[The Breakup Archives 2]<br />
+                      (이별일기2)</span
+                    >
+                  </div>
                 </div>
               </div>
               <div class="swiper-scrollbar"></div>
