main media query

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="gnb">
             <div class="top_menu">
               <ul class="menu_lst">
-                <li class="lst_menu"><a href="#">NOTION</a></li>
+                <li class="lst_menu"><a href="./notion.html">NOTION</a></li>
                 <li class="lst_menu"><a href="./itemlist.html">CD·DVD</a></li>
                 <li class="lst_menu"><a href="#">GOODS</a></li>
                 <li class="lst_menu"><a href="#">EVENT</a></li>
@@ -265,16 +265,14 @@
       <script>
         var splide = new Splide(".main_slide", {
           type: "loop",
-          // perPage: 1,
-          // arrows: false,
           gap: "40px",
           start: 0,
-          // autoplay: {
-          //   interval: 300,
-          //   pauseOnHover: {
-          //     resetProgress: true,
-          //   },
-          // },
+          autoplay: {
+            interval: 300,
+            pauseOnHover: {
+              resetProgress: true,
+            },
+          },
           autoWidth: true,
         });
 
