--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </ul>
           </div>
           <div class="logo">
-            <a href="#">
+            <a href="./index.html">
               <img src="./images/comm/soundwave.png" alt="SOUND WAVE" />
             </a>
           </div>
@@ -113,7 +113,7 @@
               <ul class="menu_lst">
                 <li class="lst_menu"><a href="./notion.html">NOTION</a></li>
                 <li class="lst_menu"><a href="./itemlist.html">CD·DVD</a></li>
-                <li class="lst_menu"><a href="#">GOODS</a></li>
+                <li class="lst_menu"><a href="./goodslist.html">GOODS</a></li>
                 <li class="lst_menu"><a href="#">EVENT</a></li>
               </ul>
             </div>
