--- a/itemlist.html
+++ b/itemlist.html
@@ -70,20 +70,6 @@
     </div>
     <div class="wrap">
       <header id="header">
-        <div class="header_bbsbg">
-          <div class="inner header_bbs">
-            <button class="bbs_btn bbs_left">
-              <span class="blind">왼쪽으로 넘기기</span>
-            </button>
-            <p class="header_bbstxt">
-              [공지] PEAK TIME COLLABO CAFE Official MD 배송안내
-              <a href="#" class="bbs_togo">GO</a>
-            </p>
-            <button class="bbs_btn bbs_right">
-              <span class="blind">오른쪽으로 넘기기</span>
-            </button>
-          </div>
-        </div>
         <div class="inner header_bar">
           <div class="header_top_util">
             <ul class="util_bar">
@@ -93,16 +79,16 @@
             </ul>
           </div>
           <div class="logo">
-            <a href="#">
+            <a href="./index.html">
               <img src="./images/comm/soundwave.png" alt="SOUND WAVE" />
             </a>
           </div>
           <div class="gnb">
             <div class="top_menu">
               <ul class="menu_lst">
-                <li class="lst_menu"><a href="#">NOTION</a></li>
+                <li class="lst_menu"><a href="./notion.html">NOTION</a></li>
                 <li class="lst_menu"><a href="./itemlist.html">CD·DVD</a></li>
-                <li class="lst_menu"><a href="#">GOODS</a></li>
+                <li class="lst_menu"><a href="./goodslist.html">GOODS</a></li>
                 <li class="lst_menu"><a href="#">EVENT</a></li>
               </ul>
             </div>
