ItemList media 완, goods 해야됨

--- a/goodslist.html
+++ b/goodslist.html
@@ -3,35 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sound Wave | Item list</title>
+    <title>Goods List | 사운드 웨이브</title>
     <meta
       name="description"
-      content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요"
+      content="음반판매 사이트 '사운드웨이브'를 웹접근성에 맞게 리디자인한 개인 포트폴리오 사이트입니다"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="페이지 제목" />
-    <meta property="og:description" content="페이지 설명" />
+    <meta property="og:title" content="사운드웨이브" />
+    <meta
+      property="og:description"
+      content="음반판매 사이트 '사운드웨이브'를 웹접근성에 맞게 리디자인한 개인 포트폴리오 사이트입니다"
+    />
     <meta
       property="og:image"
-      content="http://www.mysite.com/article/article1_featured_image.jpg"
+      content="http://dkel204.dothome.co.kr/gb5/images/soundwave.png"
     />
-    <meta
-      property="og:url"
-      content="http://www.mysite.com/article/article1.html"
-    />
+    <meta property="og:url" content="http://dkel204.dothome.co.kr/gb5/" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="페이지 제목" />
-    <meta name="twitter:description" content="페이지 설명" />
+    <meta name="twitter:title" content="사운드웨이브" />
+    <meta
+      name="twitter:description"
+      content="음반판매 사이트 '사운드웨이브'를 웹접근성에 맞게 리디자인한 개인 포트폴리오 사이트입니다"
+    />
     <meta
       name="twitter:image"
-      content="http://www.mysite.com/article/article1.html"
+      content="http://dkel204.dothome.co.kr/gb5/images/soundwave.png"
     />
-    <meta name="twitter:domain" content="사이트 명" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./images/comm/soundwave.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
       rel="stylesheet"
@@ -47,6 +54,10 @@
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
     <link
       rel="stylesheet"
