--- a/goodslist.html
+++ b/goodslist.html
@@ -189,18 +189,20 @@
             </div>
           </div>
         </section>
-        <section class="goods_explantion">
+        <section class=" goods_explantion">
           <h2 class="blind">굿즈 설명 및 교환,반품 안내</h2>
+          <div class="inner">
           <img
-            class="inner explantion_img_main"
+            class=" explantion_img_main"
             src="./images/contents/goods_kihyun2.jpg"
             alt=""
           />
           <img
-            class="inner explantion_img"
+            class=" explantion_img"
             src="./images/contents/goods_kihyun3.jpg"
             alt=""
           />
+          </div>
           <div class="goods_return">
             <span class="blind">교환 및 반품 안내글</span>
             <ul class="inner return_and_back">
