--- a/itemlist.html
+++ b/itemlist.html
@@ -629,31 +629,24 @@
               </li>
             </ul>
           </div>
-          <div class="itemlst_number">
-            <span class="blind">페이지 숫자</span>
-            <ol class="numberlist">
-              <li class="numberlist_pagenate active">
-                <a href="javascript:void(0)" title="현재 페이지1">1</a>
+          <div class="notionlst_number">
+            <a href="#" class="fristpage"
+              ><span class="blind">이전으로 이동</span></a
+            >
+            <ol class="notionlist_pagenate">
+              <li class="notinumber active">
+                <a href="#" title="현재 페이지1">1</a>
               </li>
-              <li class="numberlist_pagenate">
-                <a href="javascript:void(0)">2</a>
+              <li class="notinumber"><a href="#">2</a></li>
+              <li class="notinumber"><a href="#">3</a></li>
+              <li class="notinumber">
+                <a href="#">4</a>
               </li>
-              <li class="numberlist_pagenate">
-                <a href="javascript:void(0)">3</a>
-              </li>
-              <li class="numberlist_pagenate">
-                <a href="javascript:void(0)">4</a>
-              </li>
-              <li class="numberlist_pagenate">
-                <a href="javascript:void(0)">5</a>
-              </li>
+              <li class="notinumber"><a href="#">5</a></li>
             </ol>
-            <a href="javascript:void(0)" class="nextpage">
-              <span class="blind">다음으로 이동</span>
-            </a>
-            <a href="javascript:void(0)" class="lastpage">
-              <span class="blind">끝으로 이동</span>
-            </a>
+            <a href="#" class="last_page"
+              ><span class="blind">다음으로 이동</span></a
+            >
           </div>
         </section>
         <div class="togo_btn">
